log
Tue 26 Mar 2024 07:10:31 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cd4f633
Tue 26 Mar 2024 07:13:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:42: error: ‘Node’ has no member named ‘key’
   41 |   if (list->current) return list->current->key;
      |                                          ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
590d056
Tue 26 Mar 2024 07:14:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
10771a6
Tue 26 Mar 2024 07:14:55 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
0e78353
Tue 26 Mar 2024 07:15:51 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
69a66f4
Tue 26 Mar 2024 07:17:43 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4714f24
Tue 26 Mar 2024 07:18:26 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b163e3b
